--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.6",
     "@mantine/core": "^7.17.2",
     "@mantine/hooks": "^7.17.2",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "axios": "^1.8.4",
